Fixed layout of variant names on small screens

--- a/style-alt.css
+++ b/style-alt.css
@@ -1705,6 +1705,7 @@ tbody.curves > tr > td.item-line div.variantName {
     position: relative;
     top: auto !important;
     
+    width: auto !important;
     flex: calc(100% - 52px) 0 0;
     height: 50px;
     
